--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,5 +48,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    implementation 'com.github.yuyakaido:cardstackview:2.3.4'
+
     implementation 'com.facebook.android:facebook-login:8.2.0'
 }
